--- a/package.json
+++ b/package.json
@@ -17,8 +17,13 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
+    "@mui/x-data-grid": "^5.17.12",
+    "@mui/x-date-pickers": "^5.0.8",
     "@reduxjs/toolkit": "^1.9.0",
     "axios": "1.1.3",
+    "dayjs": "^1.11.6",
+    "moment": "^2.29.4",
+    "moment-jalaali": "0.9.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
